Develop-Deploy/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: weather-api
  ports:
    - name: http
      protocol: TCP
      port: 80       # <-- PUBLIC LOADBALANCER PORT
      targetPort: 8000   # <-- INSIDE CONTAINER
